data/derived/comb/progs/unify/prog2212.ml.out
Characters 133-139:
  | 0 -> buildX
         ^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type bool
